k8s/manifests/orders-client.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: orders-client
  namespace: microservices
spec:
  replicas: 1
  selector:
    matchLabels:
      app: orders-client
  template:
    metadata:
      labels:
        app: orders-client
    spec:
      containers:
      - name: orders-client
        image: orders-client:latest
        imagePullPolicy: Never
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: orders-client
  namespace: microservices
spec:
  selector:
    app: orders-client
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
