k8s/manifests/orders-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: orders-db
  namespace: microservices
  labels:
    app: orders-db
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: orders-db
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: orders-db
  namespace: microservices
spec:
  serviceName: "orders-db"
  replicas: 1
  selector:
    matchLabels:
      app: orders-db
  template:
    metadata:
      labels:
        app: orders-db
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
          name: postgres
        volumeMounts:
        - name: orders-db-data
          mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
  - metadata:
      name: orders-db-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: standard
      resources:
        requests:
          storage: 1Gi
