k8s/manifests/traefik.yaml
kind: Deployment
apiVersion: apps/v1
metadata:
  namespace: microservices
  name: traefik
  labels:
    app: traefik
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traefik
  template:
    metadata:
      labels:
        app: traefik
    spec:
      serviceAccountName: traefik-ingress-controller
      containers:
        - name: traefik
          image: traefik:v2.5
          args:
            - --api.insecure=true
            - --accesslog=true
            - --providers.kubernetescrd
            - --providers.kubernetesingress
            - --entrypoints.web.address=:80
          ports:
            - name: web
              containerPort: 80
            - name: admin
              containerPort: 8080
      
---
apiVersion: v1
kind: Service
metadata:
  name: traefik
  namespace: microservices
spec:
  type: LoadBalancer
  ports:
    - protocol: TCP
      name: web
      port: 80
      targetPort: web
    - protocol: TCP
      name: admin
      port: 8080
      targetPort: admin
  selector:
    app: traefik
