k8s/manifests/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: microservices-ingress
  namespace: microservices
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
  rules:
  - http:
      paths:
      - path: /orders-api
        pathType: Prefix
        backend:
          service:
            name: orders-service
            port:
              number: 8000
      - path: /payments-api
        pathType: Prefix
        backend:
          service:
            name: payments-service
            port:
              number: 8001
      - path: /
        pathType: Prefix
        backend:
          service:
            name: orders-client
            port:
              number: 80
